--- a/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
+++ b/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RectangleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RectangleForm.Designer.cs">
+      <DependentUpon>RectangleForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CircleForm.resx">
       <DependentUpon>CircleForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RectangleForm.resx">
+      <DependentUpon>RectangleForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
