--- a/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
+++ b/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
@@ -66,6 +66,12 @@
     <Compile Include="RectangleForm.Designer.cs">
       <DependentUpon>RectangleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="TriangleForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TriangleForm.Designer.cs">
+      <DependentUpon>TriangleForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CircleForm.resx">
       <DependentUpon>CircleForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,6 +89,9 @@
     </Compile>
     <EmbeddedResource Include="RectangleForm.resx">
       <DependentUpon>RectangleForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TriangleForm.resx">
+      <DependentUpon>TriangleForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
