--- a/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
+++ b/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="RectangleForm.resx">
       <DependentUpon>RectangleForm.cs</DependentUpon>
@@ -105,6 +106,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Circle_simple.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rectangle_simple.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Triangle_simple.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
