Добавил библиотеку классов Figure

--- a/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
+++ b/Geometry_2_WindowsFormsApp/Geometry_2_WindowsFormsApp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CircleForm.Designer.cs">
       <DependentUpon>CircleForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Figure.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
